mikec/tests/Pass/1_line/operators/increment/28.mc
/*Increment operator*/

int main()
{
	int a;
	a++;
}