mikec/tests/FAIL/assign/17.mc
/*declare void variable*/
void main(){
  void a;
}
